ARROW-12568: [C++][Compute] Segfault when casting sliced ListArray